[package]
name = "meetmix"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Michael Olson <c@mwolson.org>"]
description = "Combine Bluetooth mic and speaker audio into one PipeWire recording for minutes"
repository = "https://github.com/mwolson/meetmix"
readme = "README.md"
keywords = ["bluetooth", "pipewire", "pulseaudio", "minutes", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bin]]
name = "meetmix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde_json = "1"
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
