[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetmix"
version = "0.2.0"
description = "Combine mic + speaker monitor into a single PipeWire source for minutes record"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pulsectl>=0.5.0"]

[project.scripts]
meetmix = "meetmix:main"

[tool.hatch.build.targets.wheel]
packages = ["meetmix"]

[tool.ty.rules]
all = "error"
